<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/dimen_10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/hot_news_item_title"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/size_16sp" />

        <ImageView
            android:id="@+id/thumb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_190dp"
            android:layout_marginTop="@dimen/dimen_7dp"
            android:scaleType="fitXY"
            android:src="@mipmap/news_bg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hot_news_item_category"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/size_13sp" />

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hot_news_item_category_content"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/size_13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hot_news_item_author"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/size_13sp" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hot_news_item_author_content"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/size_13sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_9dp"
                android:text="@string/hot_news_item_time_content"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/size_13sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_f1f1f1" />
</RelativeLayout>