<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_115dp"
    android:background="@color/color_ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/dimen_50dp"
                android:text="@string/news_item_title_1"
                android:textColor="@color/color_222222"
                android:textSize="@dimen/size_16sp" />

            <ImageView
                android:id="@+id/thumb"
                android:layout_width="@dimen/dimen_108dp"
                android:layout_height="@dimen/dimen_64dp"
                android:scaleType="fitXY"
                android:src="@mipmap/news_pic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_9dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/header"
                android:layout_width="@dimen/dimen_16dp"
                android:layout_height="@dimen/dimen_16dp"
                android:scaleType="fitXY"
                android:src="@mipmap/header" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_9dp"
                android:text="@string/news_item_author"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/size_13sp" />

            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_9dp"
                android:text="@string/news_item_comment"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/size_13sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_9dp"
                android:text="@string/news_item_time"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/size_13sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_f1f1f1" />
</RelativeLayout>