<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_329dp"
        android:scaleType="fitXY"
        android:src="@mipmap/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_278dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dimen_18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_230dp"
            android:background="@drawable/shape_login_form"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dimen_42dp"
            android:paddingRight="@dimen/dimen_31dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dimen_25dp"
                    android:layout_height="@dimen/dimen_25dp"
                    android:layout_marginRight="@dimen/dimen_20dp"
                    android:src="@mipmap/account" />

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/account_hint"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/size_18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginVertical="@dimen/dimen_23dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dimen_25dp"
                    android:layout_height="@dimen/dimen_25dp"
                    android:layout_marginRight="@dimen/dimen_20dp"
                    android:src="@mipmap/pwd" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/pwd_hint"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/size_18sp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_55dp"
            android:layout_marginTop="@dimen/dimen_67dp"
            android:background="@drawable/shape_big_register_btn"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/size_24sp" />
    </LinearLayout>

</RelativeLayout>